--- a/.github/workflows/daily_news.yml
+++ b/.github/workflows/daily_news.yml
@@ -29,4 +29,4 @@ jobs:
           # 아까 깃허브 Secrets에 저장한 이름을 그대로 적어야 합니다.
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: python news_bot.py
+        run: python daily_news_bot.py
